--- a/aula-3/app/index.html
+++ b/aula-3/app/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>ENEJ 2015</title>
+  <title>My AngularJS App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
@@ -29,26 +29,34 @@
   </style>
 </head>
 <body ng-app="enejApp">
+  <!-- <ul class="menu">
+    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/view2">view2</a></li>
+  </ul> -->
 
-  <ul>
-    <li><a href="#/registration">Cadastro</a></li>
-  </ul>
+  <!--[if lt IE 7]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
 
   <div ng-view></div>
 
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/jQuery-Mask-Plugin/dist/jquery.mask.js"></script>
-  <!-- <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
+  <!-- In production use:
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+  -->
+  <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
   <script type="text/javascript">
     var myFirebase = new Firebase("https://glowing-torch-368.firebaseio.com/");
-  </script> -->
+  </script>
+
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/jQuery-Mask-Plugin/dist/jquery.mask.js"></script>
+
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+
   <script src="app.js"></script>
-  <script src="registration/registration.js"></script>
-  <!-- <script src="lecture/lecture.js"></script> -->
   <script src="components/input-mask/input-mask.js"></script>
-  <script src="components/input-mask/input-mask-directive.js"></script>
+  <script src="registration/registration.js"></script>
 
 </body>
 </html>
