--- a/aula-6/app/hotels/form.html
+++ b/aula-6/app/hotels/form.html
@@ -1,7 +1,7 @@
 <form ng-submit="ctrl.sendForm()">
     <div class="form-group">
         <label for="nome">Nome:</label>
-        <input type="text" class="form-control" name="nome" id="nome" value="" ng-model="ctrl.hotel.nome"></input>
+        <input type="text" class="form-control" name="nome" id="nome" value="" ng-model="ctrl.hotel.name"></input>
     </div>
     <div class="form-group">
         <label for="professor">Email:</label>
