Criação do serviço de usuário e finalização da aula

--- a/aula-6/app/index.html
+++ b/aula-6/app/index.html
@@ -35,7 +35,7 @@
 <body ng-app="enejApp">
   <ul class="menu">
     <li><a href="#/hotels/add">Cadastrar Hotéis</a></li>
-    <li><a href="#/hotels/join">Entrar em Hotel</a></li>
+    <li><a href="#/hotels/join/-JkA-j1HUJTUpZ0VIf8D">Entrar em Hotel</a></li>
     <li><a href="#/workshops">Workshops</a></li>
   </ul>
 
@@ -58,6 +58,7 @@
 
   <script src="app.js"></script>
   <script src="components/input-mask/input-mask.js"></script>
+  <script src="components/user/user.js"></script>
   <script src="registration/registration.js"></script>
   <script src="workshops/workshops.js"></script>
   <script src="hotels/hotels.js"></script>
